[package]
name = "bitgen"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
blake3 = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.9"
ed25519-dalek = "1.0.1"
rand = "0.8"
bs58 = "0.4"